<resources>
    <string name="app_name">二货</string>
    <string name="str_login_account_tip">请输入学号</string>
    <string name="str_login_password">请输入密码</string>
    <string name="str_login">登陆</string>
    <string name="str_login_verification">请输入验证码</string>
    <string name="str_verification">验证码</string>
    <string name="str_goods">商品</string>
    <string name="str_me">我</string>
    <string name="str_avatar">头像</string>
    <string name="str_my_goods">我的商品</string>
    <string name="str_my_favorite">我的收藏</string>
    <string name="str_about_erhuo">关于二货</string>
    <string name="str_exit">退出账号</string>
    <string name="str_sample_time">2017–2–27 23:20</string>
    <string name="str_sample_description">商品描述。goods description</string>
    <string name="str_personal_info">个人信息</string>
    <string name="str_nick_name">昵称</string>
    <string name="str_sign">个性签名</string>
    <string name="str_sex">性别</string>
    <string name="str_phone">手机号</string>
    <string name="str_wechat">微信号</string>
    <string name="str_qq">QQ号</string>
    <string name="confirm">确定</string>
    <string name="uploading">正在上传</string>
    <string name="str_goods_create">发布商品</string>
    <string name="str_goods_description_hint">请输入商品描述&#8230;</string>
    <string name="str_goods_title_hint">请输入商品标题&#8230;</string>
    <string name="str_goods_price_hint">请输入商品价格&#8230;</string>
    <string name="str_create">发布</string>
    <string name="str_about_version">版本信息</string>
    <string name="str_about_team">团队介绍</string>
    <string name="str_about_reply">信息反馈</string>
    <string name="str_about_pay">赞助</string>
    <string name="str_goods_detail">商品详情</string>
    <string name="str_other">其他</string>
    <string name="str_permission">权限提醒</string>
    <string name="str_permission_tip">居然之前没有给二货这个权限… 还好有挽回机会…现在打开手机自带的系统设置，给hoho授予相应应用权限吧。</string>
    <string name="str_loading">正在加载&#8230;</string>
    <string name="str_reply_submit">提交反馈</string>
    <string name="str_pay_tip">后续版本我们会根据小伙伴们的反馈增加功能\n\n赞助将用于服务器的花费</string>

</resources>
