<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_bg_avatar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/gray">

        <ImageView
            android:id="@+id/iv_bg_avatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/str_avatar"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_avatar"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="11dp"
            android:gravity="center"
            android:maxLines="2"
            android:text="nick name"
            android:textSize="16sp"
            android:textColor="@color/white" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_my_goods"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/btn_normal"
        android:paddingLeft="11dp"
        android:paddingRight="11dp"
        android:text="@string/str_my_goods"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <Button
        android:id="@+id/btn_my_favorite"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/btn_normal"
        android:paddingLeft="11dp"
        android:paddingRight="11dp"
        android:text="@string/str_my_favorite"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_about_erhuo"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/btn_normal"
        android:paddingLeft="11dp"
        android:paddingRight="11dp"
        android:text="@string/str_about_erhuo"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_exit_or_login"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/btn_normal"
        android:paddingLeft="11dp"
        android:paddingRight="11dp"
        android:text="@string/str_exit"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textSize="16sp" />
</LinearLayout>