<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp"
        app:cardMaxElevation="6dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_goods_avatar_item"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/str_avatar"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tv_text_item"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="11dp"
                android:layout_toEndOf="@+id/iv_goods_avatar_item"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/iv_goods_time_item"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="11dp"
                android:gravity="center_vertical"
                android:text="@string/str_sample_time"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_goods_description_item"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/iv_goods_avatar_item"
                android:gravity="center_vertical"
                android:text="@string/str_sample_description"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/iv_goods_img_itme"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_below="@id/tv_goods_description_item"
                android:src="@drawable/me_icon" />

            <ImageView
                android:id="@+id/iv_goods_img2_itme"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/tv_goods_description_item"
                android:src="@drawable/progress_small" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>